// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`auxiliary functions to reducer should show 0% score instead if the system score is 0 1`] = `
<ComplianceScore
  compliant={false}
  rulesFailed={300}
  rulesPassed={30}
  score={0}
  supported={true}
>
  <Text>
    <p
      className=""
      data-ouia-component-id="OUIA-Generated-Text-2"
      data-ouia-component-type="PF4/Text"
      data-ouia-safe={true}
      data-pf-content={true}
    >
      <Tooltip
        content="The system compliance score is calculated by OpenSCAP and is a normalized weighted sum of rules selected for this policy."
      >
        <Popper
          appendTo={[Function]}
          distance={15}
          enableFlip={true}
          flipBehavior={
            Array [
              "top",
              "right",
              "bottom",
              "left",
              "top",
              "right",
              "bottom",
            ]
          }
          isVisible={false}
          onBlur={[Function]}
          onDocumentClick={false}
          onDocumentKeyDown={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onPopperMouseEnter={[Function]}
          onPopperMouseLeave={[Function]}
          onTriggerEnter={[Function]}
          placement="top"
          popper={
            <div
              aria-live="off"
              className="pf-c-tooltip"
              id="pf-tooltip-2"
              role="tooltip"
              style={
                Object {
                  "maxWidth": null,
                  "opacity": 0,
                  "transition": "opacity 300ms cubic-bezier(.54, 1.5, .38, 1.11)",
                }
              }
            >
              <TooltipArrow />
              <TooltipContent
                isLeftAligned={false}
              >
                The system compliance score is calculated by OpenSCAP and is a normalized weighted sum of rules selected for this policy.
              </TooltipContent>
            </div>
          }
          popperMatchesTriggerWidth={false}
          positionModifiers={
            Object {
              "bottom": "pf-m-bottom",
              "bottom-end": "pf-m-bottom-right",
              "bottom-start": "pf-m-bottom-left",
              "left": "pf-m-left",
              "left-end": "pf-m-left-bottom",
              "left-start": "pf-m-left-top",
              "right": "pf-m-right",
              "right-end": "pf-m-right-bottom",
              "right-start": "pf-m-right-top",
              "top": "pf-m-top",
              "top-end": "pf-m-top-right",
              "top-start": "pf-m-top-left",
            }
          }
          removeFindDomNode={false}
          trigger={
            <div>
              <CompliantIcon
                compliant={false}
                rulesFailed={300}
                rulesPassed={30}
                score={0}
                supported={true}
              />
               0%
            </div>
          }
          zIndex={9999}
        >
          <FindRefWrapper
            onFoundRef={[Function]}
          >
            <div>
              <CompliantIcon
                compliant={false}
                key="system-compliance-icon-undefined"
                rulesFailed={300}
                rulesPassed={30}
                score={0}
                supported={true}
              >
                <ExclamationCircleIcon
                  color="var(--pf-global--danger-color--100)"
                  noVerticalAlign={false}
                  size="sm"
                >
                  <svg
                    aria-hidden={true}
                    aria-labelledby={null}
                    fill="var(--pf-global--danger-color--100)"
                    height="1em"
                    role="img"
                    style={
                      Object {
                        "verticalAlign": "-0.125em",
                      }
                    }
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                    />
                  </svg>
                </ExclamationCircleIcon>
              </CompliantIcon>
               0%
            </div>
          </FindRefWrapper>
        </Popper>
      </Tooltip>
    </p>
  </Text>
</ComplianceScore>
`;

exports[`auxiliary functions to reducer should show a danger icon if the host is not compliant 1`] = `
<ComplianceScore
  compliant={false}
  rulesFailed={300}
  rulesPassed={30}
  score={10}
  supported={true}
>
  <Text>
    <p
      className=""
      data-ouia-component-id="OUIA-Generated-Text-1"
      data-ouia-component-type="PF4/Text"
      data-ouia-safe={true}
      data-pf-content={true}
    >
      <Tooltip
        content="The system compliance score is calculated by OpenSCAP and is a normalized weighted sum of rules selected for this policy."
      >
        <Popper
          appendTo={[Function]}
          distance={15}
          enableFlip={true}
          flipBehavior={
            Array [
              "top",
              "right",
              "bottom",
              "left",
              "top",
              "right",
              "bottom",
            ]
          }
          isVisible={false}
          onBlur={[Function]}
          onDocumentClick={false}
          onDocumentKeyDown={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onPopperMouseEnter={[Function]}
          onPopperMouseLeave={[Function]}
          onTriggerEnter={[Function]}
          placement="top"
          popper={
            <div
              aria-live="off"
              className="pf-c-tooltip"
              id="pf-tooltip-1"
              role="tooltip"
              style={
                Object {
                  "maxWidth": null,
                  "opacity": 0,
                  "transition": "opacity 300ms cubic-bezier(.54, 1.5, .38, 1.11)",
                }
              }
            >
              <TooltipArrow />
              <TooltipContent
                isLeftAligned={false}
              >
                The system compliance score is calculated by OpenSCAP and is a normalized weighted sum of rules selected for this policy.
              </TooltipContent>
            </div>
          }
          popperMatchesTriggerWidth={false}
          positionModifiers={
            Object {
              "bottom": "pf-m-bottom",
              "bottom-end": "pf-m-bottom-right",
              "bottom-start": "pf-m-bottom-left",
              "left": "pf-m-left",
              "left-end": "pf-m-left-bottom",
              "left-start": "pf-m-left-top",
              "right": "pf-m-right",
              "right-end": "pf-m-right-bottom",
              "right-start": "pf-m-right-top",
              "top": "pf-m-top",
              "top-end": "pf-m-top-right",
              "top-start": "pf-m-top-left",
            }
          }
          removeFindDomNode={false}
          trigger={
            <div>
              <CompliantIcon
                compliant={false}
                rulesFailed={300}
                rulesPassed={30}
                score={10}
                supported={true}
              />
               10%
            </div>
          }
          zIndex={9999}
        >
          <FindRefWrapper
            onFoundRef={[Function]}
          >
            <div>
              <CompliantIcon
                compliant={false}
                key="system-compliance-icon-undefined"
                rulesFailed={300}
                rulesPassed={30}
                score={10}
                supported={true}
              >
                <ExclamationCircleIcon
                  color="var(--pf-global--danger-color--100)"
                  noVerticalAlign={false}
                  size="sm"
                >
                  <svg
                    aria-hidden={true}
                    aria-labelledby={null}
                    fill="var(--pf-global--danger-color--100)"
                    height="1em"
                    role="img"
                    style={
                      Object {
                        "verticalAlign": "-0.125em",
                      }
                    }
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                    />
                  </svg>
                </ExclamationCircleIcon>
              </CompliantIcon>
               10%
            </div>
          </FindRefWrapper>
        </Popper>
      </Tooltip>
    </p>
  </Text>
</ComplianceScore>
`;

exports[`auxiliary functions to reducer should show a question mark icon if the host has no rules passed or failed 1`] = `
<ComplianceScore
  rulesFailed={0}
  rulesPassed={0}
>
  <Text>
    <p
      className=""
      data-ouia-component-id="OUIA-Generated-Text-4"
      data-ouia-component-type="PF4/Text"
      data-ouia-safe={true}
      data-pf-content={true}
    >
       N/A
    </p>
  </Text>
</ComplianceScore>
`;

exports[`auxiliary functions to reducer should show a success icon if the host is compliant 1`] = `
<ComplianceScore
  profiles={
    Array [
      Object {
        "compliant": true,
      },
      Object {
        "compliant": true,
      },
    ]
  }
  rulesFailed={3}
  rulesPassed={30}
  score={91}
>
  <Text>
    <p
      className=""
      data-ouia-component-id="OUIA-Generated-Text-3"
      data-ouia-component-type="PF4/Text"
      data-ouia-safe={true}
      data-pf-content={true}
    >
       91%
    </p>
  </Text>
</ComplianceScore>
`;
